<resources>
    <string name="app_name">TellingTailes</string>
    <string name="login_app_title">Telling T(ai)les</string>
<!--    <string name="fcm_server_key">key=AAAAlPniYbs:APA91bGHtElSy0xiM_zOHTbq1GUggAVhRVhuQ5e2t-K-ww_W0cCsrJbuWj6wDq0_NYgHkFDhR1j1pM8cdK5kTaXJSO93ZDvGceLt-luvH6V9tCxIk5VDKlJKviEnc5Kz-vghIy8C4Jxr</string>-->
<!--    <string name="fcm_uri">https://fcm.googleapis.com/fcm/send</string>-->
<!--    <string name="gpt_api_completion_uri">https://api.openai.com/v1/engines/text-davinci-002/completions</string>-->
<!--    <string name="gpt_api_filter_uri">https://api.openai.com/v1/engines/content-filter-alpha/completions</string>-->
<!--    <string name="gpt_api_token">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</string>-->
    <string name="length_selector_min_text">Verse</string>
    <string name="length_selector_max_text">Novel</string>
    <string name="presence_selector_max_text">Fussy</string>
    <string name="presence_selector_min_text">Sloppy</string>
    <string name="create_story_button_text">Begin T(ai)le</string>
    <string name="create_story_prompt_hint">Enter the beginning of your T(ai)le. Make sure to include detail!</string>
    <string name="publish_story_button_text">Publish T(ai)le</string>
    <string name="publish_story_title_hint">Title your T(ai)le</string>
    <string name="publish_story_draft_saved_notification">Saving a draft of this T(ai)le…</string>
    <string name="length_long_error_notification">T(ai)le length is too long, try selecting a shorter length</string>
    <string name="length_short_error_notification">T(ai)le length is too short, try selecting a longer length</string>
    <string name="prompt_too_short_1">Your prompt isn\'t quite long enough. Please enter at least</string>
    <string name="prompt_too_short_2">words (currently entered</string>
    <string name="prompt_too_short_3">words)</string>
    <string name="create_in_progress_notification">Please wait while our trained robot monkeys create neo-Shakespeare for you…</string>
    <string name="generic_error_notification">Something went wrong. Check to make sure you have an internet connection. If you do… it might be our fault. Sorry!</string>
    <string name="password_change_notification">Successfully changed password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="login_button_text">Login</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_confirmation_hint">Confirm your password</string>
    <string name="username_complexity_error_notification">Enter a username that is at least 5 characters long</string>
    <string name="password_complexity_error_notification">Password is not complex enough: enter one at least 5 characters long</string>
    <string name="password_not_same_error_notification">Passwords do not match</string>
    <string name="login_error_notification">Login failed: This account does not exist, or the password is incorrect</string>
    <string name="user_exists_error_notification">A user with this name exists already; try something else</string>
    <string name="invalid_password_error_notification">Password is invalid vs. Firebase</string>
    <string name="create_user_error_notification">Creating a user account in Firebase failed</string>
    <string name="no_microphone_error_notification">This device doesn\'t appear to have a microphone, or something went wrong trying to record</string>
    <string name="author_profile_follow_option">Follow</string>
    <string name="author_profile_unfollow_option">Unfollow</string>
    <string name="author_profile_read_option">\'s T(ai)les</string>
    <string name="author_profile_follow_notification">Followed</string>
    <string name="author_profile_unfollow_notification">Unfollowed</string>
    <string name="author_profile_follow_self_error">You can\'t follow yourself.</string>
    <string name="user_get_error">Failed to get user</string>
    <string name="user_update_error">Failed to follow user</string>
    <string name="message_published_story">New T(ai)le</string>
    <string name="message_published_story_body">published a new T(ai)le</string>
    <string name="message_followed">New Follow</string>
    <string name="message_followed_body">is following you</string>
    <string name="message_loved">Love</string>
    <string name="message_loved_body">loved your T(ai)le</string>
    <string name="love_own_story_error">You can\'t love your own T(ai)le. Well, not like this, anyway.</string>
    <string name="setting_hide_title">Notifications</string>
    <string name="setting_hide_description">Enable or disable notifications</string>
    <string name="setting_password_title">Change your password</string>
    <string name="setting_password_description">********</string>
    <string name="setting_logout_title">Log Out</string>
    <string name="setting_logout_description"> </string>
    <string name="setting_text_size_title">Font</string>
    <string name="setting_text_size_description">Set text size</string>
    <string name="about_text_title">About Telling T(ai)les\nAnd GPT-3</string>
    <string name="about_text_prompt">Friends, Romans, countrymen, lend me your ears....</string>
    <string name="about_text_body">Once upon a time, writers struggled with writers block. Shakespeare stalled. Hemingway hemmed and hawed. Dostoyevsky dithered. Lucky for us, this ancient problem now has a modern solution.\n\nFeinberg\'s Finest are proud to present Telling T(ai)les, a social story-generating app for a new generation.\n\nStory completion in Telling T(ai)les is powered by OpenAI\'s GPT-3, a machine learning model that uses its training (on over 175 billion parameters) to make statistics-based predictions to expound on your musings while matching the tone and structure of your writing. The longer the prompt you supply, the more the model will have to work with as it takes your T(ai)le in new and often unexpected directions.</string>
    <string name="learn_more_about_gpt_3">learn more about GPT-3</string>
<!--    <string name="open_ai_url">https://openai.com/api/</string>-->
<!--    <string name="background_task_result_type">type</string>-->
<!--    <string name="background_task_result_create_error">createError</string>-->
<!--    <string name="background_task_result_login_error">loginError</string>-->
<!--    <string name="background_task_result_create">create</string>-->
<!--    <string name="background_task_result_login">login</string>-->
<!--    <string name="empty_string" />-->
<!--    <string name="saved_instance_username">username</string>-->
<!--    <string name="saved_instance_password">password</string>-->
<!--    <string name="saved_instance_password_confirmation">passwordConfirmation</string>-->
<!--    <string name="log_error_tag_voice_input">Listening for voice input</string>-->
<!--    <string name="log_error_msg_voice_input">Voice input has result but no data - this is an anomalous result</string>-->
<!--    <string name="saved_instance_prompt">prompt</string>-->
<!--    <string name="saved_instance_progress">progress</string>-->
<!--    <string name="space">\" \"</string>-->
<!--    <string name="newline">\n</string>-->
<!--    <string name="background_task_result_error">error</string>-->
<!--    <string name="background_task_result_username">username</string>-->
<!--    <string name="background_task_result_follows">follows</string>-->
<!--    <string name="background_task_result_result">result</string>-->
<!--    <string name="author_profile_dialog_fragment">AuthorProfileDialogFragment</string>-->
<!--    <string name="background_task_result_data_author_id">authorId</string>-->
<!--    <string name="background_task_result_data_story_count">storyCount</string>-->
<!--    <string name="background_task_result_data_love_count">loveCount</string>-->
<!--    <string name="background_task_result_data_follow_count">followCount</string>-->
<!--    <string name="background_task_result_data_following">following</string>-->
<!--    <string name="background_task_result_data_profile_icon">profileIcon</string>-->
<!--    <string name="channel_id">TELLING_TAILES_CHANNEL_ID</string>-->
<!--    <string name="channel_name">TELLING_TAILES_CHANNEL_NAME</string>-->
<!--    <string name="background_task_result_data_story">story</string>-->
<!--    <string name="background_task_result_data_published">published</string>-->
<!--    <string name="msg_true">true</string>-->
<!--    <string name="saved_instance_story">story</string>-->
<!--    <string name="saved_instance_title">title</string>-->
<!--    <string name="saved_instance_story_id">storyId</string>-->
<!--    <string name="intent_extra_string_id">storyId</string>-->
<!--    <string name="intent_extra_story">story</string>-->
<!--    <string name="intent_extra_prompt">prompt</string>-->
<!--    <string name="intent_extra_story_id">storyId</string>-->
<!--    <string name="intent_extra_feed_filter">feedFilter</string>-->
    <string name="title_too_short_1">\"Enter a title that is at least \"</string>
    <string name="title_too_short_2">\" characters (currently using \"</string>
    <string name="title_too_short_3">\" character(s))\"</string>
<!--    <string name="hyphen">-</string>-->
<!--    <string name="colon">\": \"</string>-->
<!--    <string name="background_task_result_data_last_type">last_type</string>-->
<!--    <string name="background_task_result_data_timestamp">timestamp</string>-->
<!--    <string name="background_task_result_data_last_story">last_story</string>-->
<!--    <string name="double_string">double</string>-->
<!--    <string name="background_task_result_data_story_">story_</string>-->
<!--    <string name="filter_type_bookmarks">Bookmarks</string>-->
<!--    <string name="background_task_result_data_bookmarks">bookmarks</string>-->
<!--    <string name="filter_type_by_followed_authors">By Followed Authors</string>-->
<!--    <string name="author_profile_dialog_fragment_follow">AuthorProfileDialogFragmentFollow</string>-->
<!--    <string name="background_task_result_followed">followed</string>-->
<!--    <string name="filter_type_by_author">By Author</string>-->
<!--    <string name="intent_extra_author_id">authorId</string>-->
<!--    <string name="string_string">string</string>-->
<!--    <string name="apostrophe_s">\'s</string>-->
<!--    <string name="loading_string">loading</string>-->
<!--    <string name="none_string">None</string>-->
<!--    <string name="feed_filter_my_tailes">My T(ai)les</string>-->
<!--    <string name="preference_change_password">change_password</string>-->
<!--    <string name="shared_preference_password">password</string>-->
<!--    <string name="background_task_result_password">password</string>-->
<!--    <string name="error_new_password_null">Context was null, or new password is null</string>-->
<!--    <string name="error_user_null">User was null</string>-->
</resources>