<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme"
    tools:context=".activity.CreateAccountActivity">

    <TextView
        android:id="@+id/appTitleView"
        style="@style/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <Button
        android:id="@+id/profileIcon1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:drawableStart="@drawable/ic_baseline_profile_24"
        android:text=""
        android:textColor="#283593"
        app:layout_constraintBottom_toBottomOf="@+id/createUsernameView"
        app:layout_constraintEnd_toStartOf="@+id/createUsernameView"
        app:layout_constraintTop_toTopOf="@+id/createUsernameView" />

    <EditText
        android:id="@+id/createUsernameView"
        style="@style/SmallTextInput"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleView" />

    <EditText
        android:id="@+id/createPasswordConfirmView"
        style="@style/SmallTextInput"
        android:hint="@string/password_confirmation_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPasswordView" />

    <EditText
        android:id="@+id/createPasswordView"
        style="@style/SmallTextInput"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUsernameView" />

    <Button
        android:id="@+id/createAccountButton"
        style="@style/PrimaryButton"
        android:text="@string/create_account_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPasswordConfirmView" />

</androidx.constraintlayout.widget.ConstraintLayout>