<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateStoryActivity">

    <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container_view"
        android:name="com.telling.tailes.fragment.HamburgerMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FFFFFF"
        app:layout_anchor="@+id/fragment_container_view"
        app:layout_anchorGravity="center"
        tools:context=".activity.CreateStoryActivity">

        <TextView
            android:id="@+id/lengthSelectorMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length_selector_min_text"
            app:layout_constraintEnd_toStartOf="@+id/lengthSelectorMax"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthSlider" />

        <TextView
            android:id="@+id/lengthSelectorMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length_selector_max_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lengthSelectorMin"
            app:layout_constraintTop_toBottomOf="@+id/lengthSlider" />

        <Button
            android:id="@+id/createStoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_story_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/lengthSlider"
            android:layout_width="179dp"
            android:layout_height="19dp"
            app:layout_constraintBottom_toTopOf="@+id/createStoryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.452" />

        <TextView
            android:id="@+id/storyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createStoryButton" />

        <EditText
            android:id="@+id/promptView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/create_story_prompt_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/createStoryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthSlider" />

        <ProgressBar
            android:id="@+id/storyCreateLoadingWheel"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/createStoryButton"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toTopOf="@+id/createStoryButton"
            app:layout_constraintEnd_toStartOf="@+id/promptView"
            app:layout_constraintTop_toBottomOf="@+id/lengthSlider"
            app:srcCompat="@drawable/ic_baseline_mic_border_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>